--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hackmonica",
   "version": "1.0.0",
   "description": "not a phone harmonica",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,6 @@
     "midi": "^0.9.4",
     "shake.js": "^1.2.2",
     "socket.io": "^1.4.5"
-  }
+  },
+  "devDependencies": {}
 }
